--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,5 +1,5 @@
-huion-keydial-mini-driver (0.1.0-1) unstable; urgency=medium
+huion-keydial-mini-driver (1.0.0-1) unstable; urgency=medium
 
   * Initial release
 
- -- Your Name <your.email@example.com>  Sun, 22 Jun 2025 12:00:00 +0000
+ -- JD Flamm <judsonwebdesign@gmail.com>  Sun, 22 Dec 2024 12:00:00 +0000
