--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,11 @@
+huion-keydial-mini-driver (1.0.1-1) unstable; urgency=medium
+
+  * Fix Bluetooth service discovery timing issue
+  * Add proper service discovery wait before starting HID notifications
+  * Resolve "Service Discovery has not been performed yet" errors
+
+ -- JD Flamm <judsonwebdesign@gmail.com>  Mon, 21 Jul 2025 12:00:00 +0000
+
 huion-keydial-mini-driver (1.0.0-1) unstable; urgency=medium
 
   * Initial release
