--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,9 @@
+huion-keydial-mini-driver (1.1.1-1) unstable; urgency=medium
+
+  * Fixed bug preventing button combinations from working
+
+ -- JD Flamm <judsonwebdesign@gmail.com>  Mon, 28 Jul 2025 12:00:00 +0000
+
 huion-keydial-mini-driver (1.1.0-1) unstable; urgency=medium
 
   * Add support for button combinations
